# cmd/api/event_handler.go
@@ -9,6 +9,17 @@ import (
 	"github.com/momomo0206/rest-api-in-go-gin/internal/database"
 )
 
+// CreateEvent creates a new event
+//
+// @Summary Creates a new event
+// @Description Creates a new event
+// @Tags events
+// @Accept json
+// @Produce json
+// @Param event body database.Event true "Event"
+// @Success 201 {object} database.Event
+// @Router /api/v1/events [post]
+// @Security BearerAuth
 func (app *application) createEvent(c *gin.Context) {
 	var event database.Event
 
@@ -31,10 +42,10 @@ func (app *application) createEvent(c *gin.Context) {
 	c.JSON(http.StatusCreated, event)
 }
 
-// getEvents return all events
+// GetEvents return all events
 //
-// @Summary Return all events
-// @Description Return all events
+// @Summary Returns all events
+// @Description Returns all events
 // @Tags events
 // @Accept json
 // @Produce json
@@ -49,6 +60,16 @@ func (app *application) getAllEvents(c *gin.Context) {
 	c.JSON(http.StatusOK, events)
 }
 
+// GetEvent returns a single event
+//
+// @Summary Returns a single event
+// @Description Returns a single event
+// @Tags events
+// @Accept json
+// @Produce json
+// @Param id path int true "Event ID"
+// @Success 200 {object} database.Event
+// @Router /api/v1/events/{id} [get]
 func (app *application) getEvent(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -66,6 +87,18 @@ func (app *application) getEvent(c *gin.Context) {
 	c.JSON(http.StatusOK, event)
 }
 
+// UpdateEvent updates an existing event
+//
+// @Summary Updates an existing event
+// @Description Updates an existing event
+// @Tags events
+// @Accept json
+// @Produce json
+// @Param id path int true "Event ID"
+// @Param event body database.Event true "Event"
+// @Success 200 {object} database.Event
+// @Router /api/v1/events/{id} [put]
+// @Security BearerAuth
 func (app *application) updateEvent(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -105,6 +138,17 @@ func (app *application) updateEvent(c *gin.Context) {
 	c.JSON(http.StatusOK, updatedEvent)
 }
 
+// DeleteEvent deletes an existing event
+//
+// @Summary Deletes an existing event
+// @Description Deletes an existing event
+// @Tags events
+// @Accept json
+// @Produce json
+// @Param id path int true "Event ID"
+// @Success 204
+// @Router /api/v1/events/{id} [delete]
+// @Security BearerAuth
 func (app *application) deleteEvent(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -135,6 +179,18 @@ func (app *application) deleteEvent(c *gin.Context) {
 	c.JSON(http.StatusNoContent, nil)
 }
 
+// AddAttendeeToEvent adds an attendee to an event
+//
+// @Summary Adds an attendee to an event
+// @Description Adds an attendee to an event
+// @Tags attendees
+// @Accept json
+// @Produce json
+// @Param id path int true "Event ID"
+// @Param userId path int true "User ID"
+// @Success 201 {object} database.Attendee
+// @Router /api/v1/events/{id}/attendees/{userId} [post]
+// @Security BearerAuth
 func (app *application) addAttendeeToEvent(c *gin.Context) {
 	eventId, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -197,6 +253,16 @@ func (app *application) addAttendeeToEvent(c *gin.Context) {
 	c.JSON(http.StatusCreated, attendee)
 }
 
+// GetAttendeesForEvent returns all attendees for a given event
+//
+// @Summary Returns all attendees for a given event
+// @Description Returns all attendees for a given event
+// @Tags attendees
+// @Accept json
+// @Produce json
+// @Param id path int true "Event ID"
+// @Success 200 {object} []database.User
+// @Router /api/v1/events/{id}/attendees [get]
 func (app *application) getAttendeesForEvent(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -213,6 +279,18 @@ func (app *application) getAttendeesForEvent(c *gin.Context) {
 	c.JSON(http.StatusOK, users)
 }
 
+// DeleteAttendeeFromEvent deletes an attendee from an event
+//
+// @Summary Deletes an attendee from an event
+// @Description Deletes an attendee from an event
+// @Tags attendees
+// @Accept json
+// @Produce json
+// @Param id path int true "Event ID"
+// @Param userId path int true "User ID"
+// @Success 204
+// @Router /api/v1/events/{id}/attendees/{userId} [delete]
+// @Security BearerAuth
 func (app *application) deleteAttendeeFromEvent(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -251,6 +329,16 @@ func (app *application) deleteAttendeeFromEvent(c *gin.Context) {
 	c.JSON(http.StatusNoContent, nil)
 }
 
+// GetEventsByAttendee returns all events for a given attendee
+//
+// @Summary Returns all events for a given attendee
+// @Description Returns all events for a given attendee
+// @Tags attendees
+// @Accept json
+// @Produce json
+// @Param id path int true "Attendee ID"
+// @Success 200 {object} []database.Event
+// @Router /api/v1/attendees/{id}/events [get]
 func (app *application) getEventsByAttendee(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
